Bug 153343 - Forms: Real font size of text in label field is 8pt, although default font size in control properties is different
Summary: Forms: Real font size of text in label field is 8pt, although default font si...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2023-02-03 07:35 UTC by Robert Großkopf
Modified: 2024-12-27 10:27 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Writer file with 2 label fields. Both are set to 10 pt. First field appears 8 pt. (11.05 KB, application/vnd.oasis.opendocument.text)
2023-02-03 07:35 UTC, Robert Großkopf
Details
Same as first attachment, exported to pdf. (21.80 KB, application/pdf)
2023-02-03 07:35 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2023-02-03 07:35:18 UTC
Created attachment 185077 [details]
Writer file with 2 label fields. Both are set to 10 pt. First field appears 8 pt.

Open a new Writer document.
Form → Design Mode must be set.
Form → Label
Create a label field. 
Text Label Field appears very small.
Have a look at the properties (right mouse click → Control Properties → General → Font). Says it is set to (Default).
Press Button with … and have a look. Size should be 10 pt, but it isn't.
Switch Size to 12 pt and press OK.
Reopen the dialog and switch size to 10 pt.
Now the font is set the right size.

This bug appears in
Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 6; OS: Linux 5.3; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

It doesn't appear in LO 7.4.5.1. If you open the attached file in LO 7.4.5.1 you see to label fields with identical height of fonts. If you open this in LO 7.5.0.3 it will show different height. I have attached also a *.pdf-file to show the difference.
Comment 1 Robert Großkopf 2023-02-03 07:35:48 UTC
Created attachment 185078 [details]
Same as first attachment, exported to pdf.
Comment 2 Dieter 2023-02-25 07:00:59 UTC
Tested with

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Default font is Segoe UI 9pt. But I have no idea, why this should be default font and size. I don't know where I can set this default font. in Options -> LibreOffice Writer -> Basic Fonts the default font is Liberation Serif 12pt.

So my question Robert is: Why do you expect 10pt? Where do you set default font size of text in label (same with text box)
Comment 3 Robert Großkopf 2023-02-25 07:24:55 UTC
(In reply to Dieter from comment #2)
> 
> So my question Robert is: Why do you expect 10pt? Where do you set default
> font size of text in label (same with text box)

Open Writer.
Form → Design Mode must be chosen
Create a Label Field
"Label Field" will appear as content.
Right mouse click over this field → Control Properties
General → Font: (Default) appears.
Press the button with 3 points.
Font → Size is shown as 10 pt. (but it is really 8 pt)

This font and font size is the default of the window manager. Here, with KDE on OpenSUSE, I could set it as Default for all menu entries, headers of the windows …
I could set this font to 12 pt. But if I draw the label field it is shown with 8 pt. And Font → Size will be set to 12 pt.
Seems "8 pt" is hard coded somewhere in LO since LO 7.5.
Comment 4 Dieter 2023-03-05 18:05:47 UTC
I confirm it with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d7c609dbb1bd08865b43719d2fb7c316d30bcde5
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded

Setting of default font size is 9pt, but real font size 8pt
Comment 5 raal 2023-04-21 15:27:26 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.5.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 f07b8d8187064c91a1f7be039f69cf8a0a94e6d4 is the first bad commit
commit f07b8d8187064c91a1f7be039f69cf8a0a94e6d4
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Oct 4 21:41:37 2022 +0200

    source ea36e0502c0bc381577cfa1b1a7fedf0f05d1d72

140942: tdf#150786 use a 'standard' theme for form controls | https://gerrit.libreoffice.org/c/core/+/140942
Comment 6 Timur 2023-11-01 13:14:22 UTC
In Ubuntu I seee Ubuntu font 10, so I do not reproduce "Size should be 10 pt, but it isn't."
I remove Caolan from Regression By as this does not seem like a simple regression, if a bug at all.
Comment 7 Robert Großkopf 2023-11-01 14:38:21 UTC
(In reply to Timur from comment #6)
> In Ubuntu I seee Ubuntu font 10, so I do not reproduce "Size should be 10
> pt, but it isn't."
> I remove Caolan from Regression By as this does not seem like a simple
> regression, if a bug at all.

You will see 10 pt in the properties, but you will see 8 pt on label fields an also on buttons. Have just seen this on another system with Windows for a button I have forgotton to design by
→ changing the font from 10pt to 11pt.
→ closing the dialog
→ changing font from 11pt to 10pt.
Only after I have done this it will appear as 10 pt.

Seems you aren't creating many forms, but since LO 7.5 creating forms is a nightmare. I am creating all forms at this moment with LO 7.4.7.2, because this is the last version without problems in creating forms. This isn't the only buggy behavior, which has been introduced. And I don't know who could better fix this than the person, who has been found as the one, which introduced it with a fix…

I will set back the importance.
Comment 8 Heiko Tietze 2024-01-04 14:43:46 UTC
Confirming with 

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: 60(Build:1)
CPU threads: 32; OS: Linux 6.6; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_US.UTF-8); UI: en-US
7.6.4-2
Calc: threaded

Seems the standard theme settings are not correctly applied to the form control.
Comment 9 Michael Weghorn 2024-08-02 13:22:32 UTC
(In reply to Heiko Tietze from comment #8)
> Seems the standard theme settings are not correctly applied to the form
> control.

Looking at

    commit ea36e0502c0bc381577cfa1b1a7fedf0f05d1d72
    Author: Caolán McNamara
    Date:   Tue Oct 4 12:42:33 2022 +0100

        tdf#150786 use a 'standard' theme for form controls
        
        i.e. ignore system theme so we get the same results on export to pdf
        regardless of the theme (esp dark) and don't follow the system theme
        when hosted with a writer/calc/impress document (do continue to use
        system theme for StarBasic dialogs as seen in BasicIDE)
        
        Didn't reuse 'NativeWidgetLook' for this because is currently defaults
        off, while we currently do use the colors derived from the system theme
        even when this is off, its really the NWF flag to render using the
        platform theming engine
        
        Change-Id: I816d7ebaf793e5eac7bd937d44c1db0371145199

mentioned in comment 5, it generally seems to be an intentional change to not take the system style into account for form controls in documents.

Pending Gerrit change to show the actually used font size in the dialog:
https://gerrit.libreoffice.org/c/core/+/171426

Whether or not a default font size of 8 is appropriate would in my opinion be something to discuss in a separate bug report if considered inappropriate - unless the suggestion is to make appearance of form controls dependent on the style again, i.e. logically reverting (part of) the above-mentioned commit.
Comment 10 Commit Notification 2024-08-02 16:35:12 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7247f3ad59d64c85dc891bd5195b83c714ce1ce4

tdf#153343 Show settings for the actual default font in control properties

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Weghorn 2024-08-02 16:36:59 UTC
(In reply to Michael Weghorn from comment #9)
> Pending Gerrit change to show the actually used font size in the dialog:
> https://gerrit.libreoffice.org/c/core/+/171426

Merged to master now.
Pending backport for 24-8:
https://gerrit.libreoffice.org/c/core/+/171410
Comment 12 Commit Notification 2024-08-03 21:33:23 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/2bf3cada925ca49e3ac6a249ec6c342954739986

tdf#153343 Show settings for the actual default font in control properties

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.