extensions/source/propctrlr/formstrings.hxx
@@ -198,6 +198,7 @@ inline constexpr OUString PROPERTY_NOLABEL = u"NoLabel"_ustr;
 inline constexpr OUString PROPERTY_URL = u"URL"_ustr;
 
 inline constexpr OUString PROPERTY_SELECTION_TYPE = u"SelectionType"_ustr;
+inline constexpr OUString PROPERTY_STANDARD_THEME = u"StandardTheme"_ustr;
 inline constexpr OUString PROPERTY_ROOT_DISPLAYED = u"RootDisplayed"_ustr;
 inline constexpr OUString PROPERTY_SHOWS_HANDLES = u"ShowsHandles"_ustr;
 inline constexpr OUString PROPERTY_SHOWS_ROOT_HANDLES = u"ShowsRootHandles"_ustr;
